fixed text clipping on project card for mobile

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -116,11 +116,14 @@
 .projects-card-content-subtext-container {
   display: flex;
   justify-content: end;
+  gap: 0.5em;
+  flex-wrap: wrap;
   padding: 2em 0;
 }
 
 .projects-card-content-subtext {
   color: var(--tertiary-color);
+  white-space: nowrap;
   text-shadow: 0 4px 8px black;
   font-weight: 700;
   padding: 0 0.5em;
